new changes added with ui theme

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/atom/flager",
+  "repository": "https://github.com/dessasin/Flager",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
